# hipnuc_imu_cpp

./: .gitignore  CMakeLists.txt  README.md  readme-strinkin.md
scripts/: hipnuc_imu_serial.rules
src/: example.cpp
test/: CMakeLists.txt  main  main.cpp
test/hipnuc_imu/include/: Rate.hpp  debug_tools.hpp
test/hipnuc_imu/src/: hipnuc_imu.hpp
